fix sizing and font weights for visibility and mobile compatibility

--- a/league_scorecard/style.css
+++ b/league_scorecard/style.css
@@ -3,6 +3,7 @@ body {
     flex-direction: column;
     align-items: center;
     margin: 0;
+    overflow-x: hidden;
 }
 
 #page-header {
@@ -69,6 +70,14 @@ body {
 .form-button:active {
   box-shadow: none;
   transform: translateY(0);
+}
+
+#chart-div {
+    width: 85%;
+}
+
+#table-div {
+    max-width: 85%;
 }
 
 
@@ -178,7 +187,8 @@ svg:hover {
 }
 
 #gallery-img {
-    max-width: 80%;
+    max-width: 45%;
+    max-height: 65%;
 }
 
 #gallery-container span {
@@ -187,7 +197,11 @@ svg:hover {
 }
 
 #gallery-img-desc {
+    padding-top: 2%;
+    font-weight: 400;
+    width: 65%;
     text-align: center;
+    font-size: 80%
 }
 
 .tabulator {
@@ -218,6 +232,10 @@ svg:hover {
     }
     #star-modal span {
         width: 95%;
+    }
+    #gallery-img {
+        max-width: 65%;
+        max-height: 65%;
     }
 
 }
